<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IronCoderIdeas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="make_gift_instructions">Enter the details for a gift that someone gave you or promised to give you.</string>
    <string name="make_gift_first_name">First Name</string>
    <string name="make_gift_last_name">Last Name</string>
    <string name="email_label">Email</string>
    <string name="make_gift_amount_label">$0.00</string>
    <string name="make_gift_cash">Cash</string>
    <string name="make_gift_credit">Credit Card</string>
    <string name="make_gift_card_number_label">Card Number</string>
    <string name="make_gift_verif_number">CVV</string>
    <string name="make_gift_exp_month">Exp. Month</string>
    <string name="make_gift_exp_year">Exp. Year</string>
    <string name="make_gift_street">Street 1</string>
    <string name="make_gift_city">City</string>
    <string name="make_gift_state">State</string>
    <string name="make_gift_zip">Zip</string>
	<string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">John Doe has donated $30!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_map">MapActivity</string>

</resources>